<resources>
    <string name="app_name">Ally Super App</string>
    <string name="app_name_full">Ally Super App Messenger</string>
    <string name="app_version">Version 2.5</string>
    <string name="copyright">© 2017 – 2018 Ally Super App</string>
    <string name="tinode">My Ally</string>

    <string name="login_hint">Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="new_message_hint">Type a message</string>
    <string name="send_message_button_hint">Send message</string>
    <string name="send_image_button_hint">Send image</string>
    <string name="send_file_button_hint">Send file</string>

    <string name="sign_in">Sign In</string>
    <string name="tinode_url">http://allysuperapp.co.ke/</string>
    <string name="app_description">Ally Super App</string>
    <string name="action_signup">Sign Up</string>
    <string name="sign_up">Dont Have Account? Sign Up</string>
    <string name="login_new">Login</string>
    <string name="password_new">Password</string>
    <string name="password_repeat">Repeat password</string>
    <string name="full_name">Full name, e.g. John Doe</string>
    <string name="tinode_logo">Tinode Logo</string>
    <string name="upload_avatar">Upload avatar picture</string>
    <string name="continue_fb">Continue with Facebook</string>
    <string name="continue_goog">Continue with Google</string>
    <string name="or">OR</string>
    <string name="action_cancel">Cancel</string>
    <string name="transport_default">default</string>
    <string name="transport_websocket">websocket</string>
    <string name="transport_long_polling">long polling</string>
    <string name="settings_host_name">Host name</string>
    <string name="settings_use_tls">Use TLS</string>
    <string name="settings_wire_transport">Wire transport</string>
    <string name="settings_host_name_summary">Change server address</string>
    <string name="settings_use_tls_summary">Use secure connection</string>
    <string name="settings_wire_transport_summary">Select wire transport</string>
    <string name="default_host_name">http://ally-messenger.com:6060</string>

    <!-- access mode definitions -->
    <string name="modeReadable">can join</string>
    <string name="modeWritable">can publish</string>
    <string name="modeReadOnly">read-only</string>
    <string name="modeMuted">muted</string>
    <string name="modeAdmin">admin</string>
    <string name="modeCanDelete">can delete</string>
    <string name="modeOwner">owner</string>
    <string name="modeBlocked">blocked</string>
    <!-- mode-like access statuses -->
    <string name="modeInvited">invited</string>
    <string name="modeRequested">requested</string>
    <string name="modeUndefined">undefined</string>
    <string name="modePending">pending</string>

    <!-- Menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_mute">Mute conversation</string>
    <string name="action_edit_contact">Edit contact</string>
    <string name="action_clear_messages">Clear messages</string>
    <string name="action_view_contact">View contact</string>
    <string name="action_attach">Attach</string>
    <string name="action_new_chat">New chat</string>
    <string name="action_new_group">New group chat</string>
    <string name="action_start_by_id">Start by ID</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_edit_topic">Edit topic</string>
    <string name="action_send_now">Send now</string>
    <string name="action_view_details">View details</string>
    <string name="action_copy">Copy</string>
    <string name="action_offline">Working offline</string>
    <string name="action_delete_group">Delete conversation…</string>

    <string name="avatar">Avatar picture</string>
    <string name="select_image">Select image</string>
    <string name="select_file">Select file</string>
    <string name="image_is_missing">Image is missing</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="error_login_failed">Login failed: </string>
    <string name="error_connection_failed">Connection failed: </string>
    <string name="login_required">Login required</string>
    <string name="password_required">Password required</string>
    <string name="error_new_account_failed">Account registration failed:</string>
    <string name="no_contacts">No contacts found</string>
    <string name="invite">Invite</string>
    <string name="contacts">Contacts</string>
    <string name="chats">Chats</string>

    <!-- Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
     alphabet using ListView fast scroll. -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="create_account">Create New Account</string>
    <string name="loading_text">Loading</string>
    <string name="submit_validation">Validate</string>

    <string name="search_hint">Find contacts</string>
    <string name="contacts_permission_denied">Contacts not loaded: permission denied</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="pick_account">Pick Account</string>
    <string name="tinode_invite_subject">Check out Ally Super App</string>
    <string name="tinode_invite_body">Check out Ally Super App Messenger. Download it from https://play.google.com/store/apps/details?id=com.legitimate.AllySuperApp</string>

    <string name="profile_action">Ally profile</string>
    <string name="view_profile">View Profile</string>
    <string name="tinode_message">Send Ally message</string>
    <string name="failed_to_invite">Don\'t know how to invite - no contact info</string>
    <string name="about_title">About</string>
    <string name="failed_to_send_message">Failed to send message</string>
    <string name="failed_to_delete_messages">Failed to delete messages</string>
    <string name="topic_title">Name of the group</string>
    <string name="group_members">Group Members</string>
    <string name="name_required">Topic name required</string>
    <string name="no_members">No group members</string>
    <string name="letter_tile_font_family">sans-serif-medium</string>
    <string name="add_one_member">Add at least one group member</string>
    <string name="failed_to_create_topic">Failed to create topic</string>
    <string name="add_members">Add members</string>
    <string name="leave_group">Leave group</string>
    <string name="address">Address</string>
    <string name="topic_muted">Muted</string>
    <string name="permissions">Permissions</string>
    <string name="permissions_list">Permissions: %1$s</string>
    <string name="close">Close</string>

    <string name="invitation_text">Join my group!</string>
    <string name="no_connection">You are offline</string>
    <string name="action_failed">Action failed</string>

    <string name="placeholder_contact_title">Unnamed or unknown</string>
    <string name="placeholder_topic_title">Unnamed</string>
    <string name="placeholder_private">Private info: not set</string>

    <string name="options_menu">Options menu</string>
    <string name="current_user">You</string>
    <string name="default_permissions">Default permissions</string>
    <string name="auth_permissions">Authenticated users</string>
    <string name="anon_permissions">Anonymous users</string>
    <string name="topic_private">Additional info (private)</string>
    <string name="edit_topic">Edit Topic</string>
    <string name="edit_permissions">Edit Permissions</string>

    <string name="permission_owner">Full control (owner)</string>
    <string name="permission_join">Join</string>
    <string name="permission_read">Read</string>
    <string name="permission_write">Write</string>
    <string name="permission_approve">Approve new members</string>
    <string name="permission_share">Invite new members</string>
    <string name="permission_notifications">Receive notifications</string>
    <string name="permission_delete">Delete messages</string>

    <string name="send_message">Send message</string>
    <string name="change_permissions">Change permissions</string>
    <string name="make_owner">Make owner</string>
    <string name="remove_from_group">Remove</string>
    <string name="block">Block</string>

    <string name="confirm_member_removal">Remove %1$s from \"%2$s\"?</string>
    <string name="confirm_member_ban">Remove and ban %1$s from \"%2$s\"?</string>
    <string name="confirm_delete_topic">Do you really want to delete this conversation for everyone?</string>
    <string name="modeWriteOnly">write-only</string>
    <string name="owner_cannot_unsubscribe">Owner cannot unsubscribe</string>
    <string name="read_receipts_enabled">Send read receipts</string>
    <string name="typing_notifications_enabled">Show typing notifications</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="account_settings">Account settings</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="failed_empty_password">Not changed: empty password</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="edit_account">Edit account name</string>
    <string name="invalid_login">Login is invalid</string>
    <string name="join">Join</string>
    <string name="ignore">Ignore</string>

    <string name="default_attachment_name">tinode_file_attachment</string>
    <string name="download_attachment">save</string>
    <string name="broken_image">Unknown or invalid image format</string>
    <string name="file_manager_not_found">File manager not found</string>
    <string name="attachment_too_large">The file size %1$s exceeds the %2$s limit.</string>
    <string name="failed_to_attach">Failed to send file</string>

    <string name="email">Email</string>
    <string name="tel">Phone</string>
    <string name="email_required">Email required</string>
    <string name="tel_required">Phone number required</string>
    <string name="validate_cred">Enter confirmation code sent to you by phone</string>
    <string name="confirm">Confirm</string>
    <string name="validation_example">E.g. 123456</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="failed_credential_confirmation">Incorrect confirmation code</string>
    <string name="addByIdHint">Enter topic or user ID</string>
    <string name="failed_empty_id">ID is required</string>
    <string name="topic_not_found_or_invalid">Topic not found or invalid</string>
    <string name="sending_disabled">Not available</string>

    <string name="failed_to_download">Failed to save downloaded file</string>
    <string name="failed_to_open_file">No application can view the file of this type</string>
    <string name="download_title">Tindroid download</string>
    <string name="some_permissions_missing">Some permissions missing.</string>
    <string name="invalid_file">Unable to attach this file</string>
    <string name="cancelled">cancelled</string>
    <string name="yourPermissions">Yours</string>

</resources>
