<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.tinode.AllySuperApp.com.legitimate.AllySuperApp.SignUpFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_default_margin"
        android:layout_marginTop="@dimen/activity_default_margin"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        card_view:cardPreventCornerOverlap="true"
        card_view:contentPaddingLeft="@dimen/activity_horizontal_margin"
        card_view:contentPaddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/newLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dip"
                            android:hint="@string/login_new"
                            android:inputType="text"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/newPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/password_new"
                            android:inputType="textPassword"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    android:layout_marginRight="8dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imageAvatar"
                        android:layout_width="112sp"
                        android:layout_height="112sp"
                        android:layout_marginLeft="8sp"
                        android:clickable="true"
                        android:contentDescription="@string/avatar"
                        app:srcCompat="@drawable/ic_person"/>

                    <Button
                        android:id="@+id/uploadAvatar"
                        android:layout_width="48sp"
                        android:layout_height="48sp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="2sp"
                        android:background="@drawable/pill_counter"
                        android:drawableTop="@drawable/ic_add_a_photo"
                        android:paddingTop="10dp"/>
                </RelativeLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textSize="16sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
