<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context="co.tinode.AllySuperApp.com.legitimate.AllySuperApp.LoginFragment">

    <RelativeLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageLogo"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/tinode_logo"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_description"
        android:id="@+id/appTitle"
        android:layout_below="@+id/imageLogo"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/msisdnWrapper"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/appTitle"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true" >

        <com.hbb20.CountryCodePicker
            android:layout_marginRight="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="text"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:background="@drawable/edittext_shape"
            android:id="@+id/msisdn"
            android:gravity="start"
            app:ccp_contentColor="@android:color/white"
            app:ccp_countryPreference="ke"
            app:ccp_defaultPhoneCode="254"/>

        <EditText
            android:id="@+id/editText_carrierNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/msisdn"
            android:layout_toEndOf="@+id/msisdn"
            android:layout_toRightOf="@+id/msisdn"
            android:background="@drawable/edittext_shape"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:editable="false"
            android:gravity="start"
            android:hint="Phone Number"
            android:inputType="phone"
            android:padding="9dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:id="@+id/editPasswordWrapper"
        android:layout_below="@+id/msisdnWrapper"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/password_hint"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_shape"
            android:inputType="textPassword"
            android:gravity="start"
            android:id="@+id/editPassword"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@android:color/black"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/signIn"
        android:layout_below="@+id/editPasswordWrapper"
        android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <android.support.v7.widget.AppCompatButton
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@android:color/black"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/join"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
