<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.legitimate.AllySuperApp.CredentialsFragment">

    <android.support.v7.widget.CardView
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_default_margin"
        android:layout_marginTop="@dimen/activity_default_margin"
        android:backgroundTint="@color/colorLightGray"
        app:cardBackgroundColor="@color/colorLightGray"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardPreventCornerOverlap="true"
        app:contentPaddingLeft="@dimen/activity_horizontal_margin"
        app:contentPaddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/imageLogo"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/tinode_logo"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/validate_cred"
                android:id="@+id/appTitle"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:layout_width="match_parent"
                android:hint="Validation Code"
                android:padding="10dp"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:background="@drawable/edittext_shape"
                android:inputType="number"
                android:gravity="start"
                android:id="@+id/response"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@android:color/black"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ProgressBar
                    android:background="@android:color/black"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:id="@+id/loadingProgressBar"
                    android:visibility="gone"
                    android:layout_weight="2"/>

                <Button
                    android:background="@android:color/black"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/submit_validation"
                    android:layout_weight="1"
                    android:id="@+id/signUp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
