<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.legitimate.AllySuperApp.SignUpFragment"
    tools:showIn="@layout/activity_sign_up">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/imageLogo"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/tinode_logo"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/create_account"
                    android:id="@+id/appTitle"
                    android:layout_margin="8dp"
                    android:layout_gravity="center_horizontal"/>

                <RelativeLayout
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imageAvatar"
                        android:layout_width="112sp"
                        android:layout_height="112sp"
                        android:layout_marginLeft="8sp"
                        android:clickable="true"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/avatar"
                        app:srcCompat="@drawable/ic_person"/>

                    <Button
                        android:id="@+id/uploadAvatar"
                        android:layout_width="48sp"
                        android:layout_height="48sp"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="2sp"
                        android:background="@drawable/pill_counter"
                        android:drawableTop="@drawable/ic_add_a_photo"
                        android:layout_toRightOf="@+id/imageAvatar"
                        android:paddingTop="10dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent" >

                    <com.hbb20.CountryCodePicker
                        android:layout_marginRight="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:inputType="text"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:background="@drawable/edittext_shape"
                        android:id="@+id/msisdn"
                        android:gravity="start"
                        app:ccp_contentColor="@android:color/white"
                        app:ccp_countryPreference="ke"
                        app:ccp_defaultPhoneCode="254"/>

                    <EditText
                        android:id="@+id/editText_carrierNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@+id/msisdn"
                        android:layout_toEndOf="@+id/msisdn"
                        android:layout_toRightOf="@+id/msisdn"
                        android:background="@drawable/edittext_shape"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:editable="false"
                        android:gravity="start"
                        android:hint="Phone Number"
                        android:inputType="phone"
                        android:padding="9dp"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />

                </RelativeLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:hint="Name"
                    android:padding="10dp"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:background="@drawable/edittext_shape"
                    android:inputType="text"
                    android:gravity="start"
                    android:id="@+id/name"
                    android:layout_height="wrap_content" />


                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:hint="Password"
                        android:padding="10dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/edittext_shape"
                        android:inputType="textPassword"
                        android:gravity="start"
                        android:id="@+id/newPassword"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:hint="Repeat Password"
                        android:padding="10dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/edittext_shape"
                        android:inputType="textPassword"
                        android:gravity="start"
                        android:id="@+id/repeatPassword"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:id="@+id/join"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/create_account"
                    android:background="@drawable/button_shape_default_rounded" />

            </LinearLayout>

</ScrollView>
